// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/ui/URLInput default 1`] = `
<div
  style="height: 100%;"
>
  <span
    class="p-input-icon-right"
  >
    <input
      appendto="body"
      class="p-inputtext p-component"
      type="url"
    />

    <i
      aria-label="Open the link"
      class="pi pi-external-link"
      style="display: none;"
      title="Open the link"
    />
  </span>
</div>
`;

exports[`storyshots components/ui/URLInput with a valid url 1`] = `
<div
  style="height: 100%;"
>
  <span
    class="p-input-icon-right"
  >
    <input
      appendto="body"
      class="p-inputtext p-component p-filled"
      type="url"
    />

    <i
      aria-label="Open the link"
      class="pi pi-external-link"
      style="display: none;"
      title="Open the link"
    />
  </span>
</div>
`;

exports[`storyshots components/ui/URLInput with an invalid url 1`] = `
<div
  style="height: 100%;"
>
  <span
    class="p-input-icon-right"
  >
    <input
      appendto="body"
      class="p-inputtext p-component p-filled"
      type="url"
    />

    <i
      aria-label="Open the link"
      class="pi pi-external-link"
      style="display: none;"
      title="Open the link"
    />
  </span>
</div>
`;
